@@ -73,7 +73,7 @@ class BodyRegexpFilter(object):
     Matches a regular expression on the body of an email message (any part).
     """
     def __init__(self, *exprs):
-        self.regexps = [(expr, re.compile(expr, re.IGNORECASE))
+        self.regexps = [(expr, re.compile(expr, re.IGNORECASE | re.MULTILINE))
                         for expr in exprs]
 
     def __call__(self, message):
@@ -122,4 +122,5 @@ class BodyRegexpFileFilter(BodyRegexpFilter):
         with codecs.open(path, 'r', 'UTF-8') as f:
             for line in f:
                 expr = line.rstrip('\n').rstrip('\r')
-                regexps.append((expr, re.compile(expr, re.IGNORECASE)))
+                regexps.append((expr, re.compile(expr,
+                                                 re.IGNORECASE | re.MULTILINE)))
