@@ -141,14 +141,15 @@ class TestAPI(unittest.TestCase):
         filters = queue['filters']
         self.assertEqual(len(filters), 5)
         self.assertEqual(filters[0].expr, 'exampleA.com')
-        def p(s):
-            return (s, re.compile(s, re.IGNORECASE))
+        def p(s, additional_flags=0):
+            return (s, re.compile(s, re.IGNORECASE | additional_flags))
         self.assertEqual(filters[1].regexps, [p(u'Subject: You are nice')])
         self.assertEqual(filters[2].regexps, [p(u'Subject: Nice to meet you'),
                                               p(u'Subject: You are nice')])
-        self.assertEqual(filters[3].regexps, [p(u'I like you'),])
-        self.assertEqual(filters[4].regexps, [p(u'Nice to meet you'),
-                                              p(u'You are nice')])
+        self.assertEqual(filters[3].regexps, [p(u'I like you', re.MULTILINE),])
+        self.assertEqual(filters[4].regexps, [p(u'Nice to meet you',
+                                                re.MULTILINE),
+                                              p(u'You are nice', re.MULTILINE)])
 
     def test_ctor_global_reject_filters(self):
         import pkg_resources
@@ -174,14 +175,15 @@ class TestAPI(unittest.TestCase):
         filters = po.reject_filters
         self.assertEqual(len(filters), 5)
         self.assertEqual(filters[0].expr, 'exampleA.com')
-        def p(s):
-            return (s, re.compile(s, re.IGNORECASE))
+        def p(s, additional_flags=0):
+            return (s, re.compile(s, re.IGNORECASE | additional_flags))
         self.assertEqual(filters[1].regexps, [p(u'Subject: You are nice')])
         self.assertEqual(filters[2].regexps, [p(u'Subject: Nice to meet you'),
                                               p(u'Subject: You are nice')])
-        self.assertEqual(filters[3].regexps, [p(u'I like you'),])
-        self.assertEqual(filters[4].regexps, [p(u'Nice to meet you'),
-                                              p(u'You are nice')])
+        self.assertEqual(filters[3].regexps, [p(u'I like you', re.MULTILINE)])
+        self.assertEqual(filters[4].regexps, [p(u'Nice to meet you',
+                                                re.MULTILINE),
+                                              p(u'You are nice', re.MULTILINE)])
 
     def test_ctor_bad_filtertype(self):
         self.assertRaises(ValueError, self._make_one, StringIO(
