@@ -1,6 +1,8 @@
 Unreleased
 ----------
 
+- Body checks are now multiline regexp checks. (LP #787573)
+
 0.14 (2011-05-17)
 -----------------
 
